<resources>
    <string name="app_name">Medlink</string>
    <string name="submit">Submit</string>
    <string name="btn_log_in">Log In</string>
    <string name="okay">OK</string>
    <string name="no_network_available">No network connection available.</string>
    <string name="invalid_login">Invalid login credentials. Please check your email and password and try again.</string>
    <string name="logout">Log Out</string>
    <string name="logging_out">Logging out…</string>
    <string name="logging_in">Logging in…</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="fetching_requests">Fetching requests…</string>
    <string name="we_are_having_technical_issues">Sorry, we are having technical issues. Please try again later…</string>
    <string name="sub_section_header_approved">Approved Items</string>
    <string name="sub_section_header_processed">Processed Items</string>
    <string name="sub_section_header_pending">Pending Items</string>
    <string name="sub_section_header_delivered_or_flagged">Delivered/Flagged Items</string>
    <string name="sub_section_header_denied">Denied Items</string>
    <string name="see_order_history">See Order History</string>
    <string name="mark_as_received">Mark supply as received</string>
    <string name="flag_supply">Flag supply</string>
    <string name="order_details">Order Details</string>
    <string name="approved_for_delivery">Approved for delivery</string>
    <string name="denied_by_pcmo">Denied by PCMO</string>
    <string name="scheduled_for_pickup">Scheduled for pickup</string>
    <string name="will_be_reimbursed">Will be reimbursed</string>
    <string name="not_processed_by_pcmo">Not processed by PCMO</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_received">Are you sure you received this supply?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="marking_supply_as_received">Marking supply as received…</string>
    <string name="header_backdrop">Header backdrop</string>
    <string name="medlink">Medlink</string>
    <string name="not_yet_implemented">Not yet implemented</string>
    <string name="title_activity_create_request">New Order</string>
    <string name="special_instructions">Special Instructions</string>
    <string name="submit_order">Submit Order</string>
    <string name="select_supplies">Select Supplies</string>
    <string name="submitting_new_order">Submitting new order…</string>
    <string name="your_order_has_been_submitted">Your order has been submitted</string>
    <string name="supply_marked_as_received">Supply marked as received</string>
    <string name="supply_flagged_for_pcmo">Supply flagged for PCMO</string>
    <string name="flagging_supply_for_pcmo">Flagging supply for PCMO</string>
    <string name="are_you_sure_not_received">Are you sure you haven\'t received this supply?</string>
    <string name="your_order_has_been_saved">Your order has been saved to be submitted when there is a network connection</string>
    <string name="section_header_submitted_orders">Submitted Orders</string>
    <string name="not_submitted">Not Submitted</string>
    <string name="section_header_unsubmitted_orders">Unsubmitted Orders</string>
    <string name="send_order_by_sms">Would you like to create this order via SMS?</string>
    <string name="are_you_sure_want_to_log_out">Are you sure you want to log out? You will lose any unsubmitted requests.</string>
    <string name="no_orders_found">No orders found</string>
    <string name="send_unsubmitted_requests">Send unsubmitted requests</string>
    <string name="submitting_orders">Submitting orders…</string>
    <string name="user_response_received">You received this item on %1$s</string>
    <string name="received">received</string>
    <string name="flagged">flagged</string>
    <string name="title_activity_request_history">Order History</string>
    <string name="user_response_flagged">You flagged this item</string>
    <string name="please_give_us_sms_permissions">Please give us permission to send an SMS to create this order.</string>
</resources>
