<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.activities.requestdetail.RequestDetailActivity">

    <TextView
        android:id="@+id/selectSuppliesSectionHeaderTv"
        style="@style/AppTheme.NoActionBar.TextSubSectionHeader"
        android:layout_alignParentTop="true"
        android:text="@string/select_supplies" />

    <View
        android:id="@+id/divider1"
        style="@style/Divider"
        android:layout_below="@id/selectSuppliesSectionHeaderTv" />

    <view
        android:id="@+id/suppliesListRv"
        class="android.support.v7.widget.RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/specialInstructionsHeaderTv"
        android:layout_below="@id/divider1" />

    <TextView
        android:id="@id/specialInstructionsHeaderTv"
        style="@style/AppTheme.NoActionBar.TextSubSectionHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/divider2"
        android:text="@string/special_instructions" />

    <View
        android:id="@id/divider2"
        style="@style/Divider"
        android:layout_above="@+id/specialInstructionsEt" />

    <EditText
        android:id="@id/specialInstructionsEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submitBtn"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:minLines="3"
        android:theme="@android:style/Theme.Holo.Light" />

    <Button
        android:id="@id/submitBtn"
        style="@style/AppTheme.NoActionBar.Button"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:text="@string/submit_order" />

</RelativeLayout>
